--- a/lookup_stack_outputs.template
+++ b/lookup_stack_outputs.template
@@ -96,7 +96,7 @@
             ]
           }
         },
-        "Runtime": "nodejs",
+        "Runtime": "nodejs4.3",
         "Timeout": "30"
       },
       "DependsOn": [
